--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
---extra-index-url https://download.pytorch.org/whl/cu121
-whisperx @ git+https://github.com/m-bain/whisperx.git
+--extra-index-url https://download.pytorch.org/whl/cu118
+whisperx @ https://github.com/m-bain/whisperx/archive/refs/tags/v3.1.1.tar.gz
+pyannote.audio @ https://github.com/pyannote/pyannote-audio/archive/11b56a137a578db9335efc00298f6ec1932e6317.tar.gz
 faster-whisper==1.2.1
 openai>=1.50.0
 python-dotenv>=1.0.1
@@ -9,14 +10,13 @@ orjson>=3.10.7
 protobuf==4.25.3
 pydantic>=2.8.2
 sentence-transformers==2.2.2
-torch==2.3.1+cu121
-torchaudio==2.3.1+cu121
-torchvision==0.18.1+cu121
+torch==2.0.0+cu118
+torchaudio==2.0.1+cu118
+torchvision==0.15.1+cu118
 transformers==4.37.2
 huggingface-hub==0.36.0
 tokenizers==0.15.2
 numpy>=2.0.0
-pyannote.audio==3.4.0
 scikit-learn>=1.5.1
 tabulate>=0.9.0
 langcodes>=3.4.0
