--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-whisperx @ https://github.com/m-bain/whisperx/archive/refs/tags/v3.1.1.tar.gz
-pyannote.audio @ https://github.com/pyannote/pyannote-audio/archive/11b56a137a578db9335efc00298f6ec1932e6317.tar.gz
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch==2.3.1+cu121
+torchvision==0.18.1+cu121
+torchaudio==2.3.1+cu121
+# WhisperX without dependencies to avoid conflicts, we install dependencies manually
+whisperx @ git+https://github.com/m-bain/whisperx.git
 faster-whisper==1.2.1
-openai>=1.50.0
-python-dotenv>=1.0.1
-pandas==2.2.3
-tqdm>=4.66.4
-orjson>=3.10.7
+pyannote.audio==3.4.0
 protobuf==4.25.3
+pandas==2.2.3
+orjson
+python-dotenv
+tqdm
+huggingface-hub==0.36.0
+transformers==4.37.2
+tokenizers==0.15.2
+# Other dependencies from original requirements that might still be needed
+openai>=1.50.0
 pydantic>=2.8.2
 sentence-transformers==2.2.2
-torch==2.0.0+cu118
-torchaudio==2.0.1+cu118
-torchvision==0.15.1+cu118
-transformers==4.37.2
-huggingface-hub==0.36.0
-tokenizers==0.15.2
 numpy>=2.0.0
 scikit-learn>=1.5.1
 tabulate>=0.9.0
