Fix dependency conflict: install whisperx via make install

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 torch==2.3.1+cu121
 torchvision==0.18.1+cu121
 torchaudio==2.3.1+cu121
-# WhisperX without dependencies to avoid conflicts, we install dependencies manually
-whisperx @ git+https://github.com/m-bain/whisperx.git
+# WhisperX installed separately to avoid dependency conflicts (see Makefile)
+# whisperx @ git+https://github.com/m-bain/whisperx.git
 faster-whisper==1.2.1
 pyannote.audio==3.4.0
 protobuf==4.25.3
