--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
---extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.3.1+cu121
-torchvision==0.18.1+cu121
-torchaudio==2.3.1+cu121
+--index-url https://download.pytorch.org/whl/nightly/cu124
+--extra-index-url https://pypi.org/simple
+# Using nightly builds for RTX 5090 (Blackwell) support
+torch
+torchvision
+torchaudio
 # WhisperX installed separately to avoid dependency conflicts (see Makefile)
 # whisperx @ git+https://github.com/m-bain/whisperx.git
 faster-whisper==1.2.1
