--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
---index-url https://download.pytorch.org/whl/nightly/cu124
---extra-index-url https://pypi.org/simple
-# Using nightly builds for RTX 5090 (Blackwell) support
-torch
-torchvision
-torchaudio
+# PyTorch is installed via Makefile to ensure Nightly version for RTX 5090
+# torch, torchvision, torchaudio removed from here
 # WhisperX installed separately to avoid dependency conflicts (see Makefile)
 # whisperx @ git+https://github.com/m-bain/whisperx.git
 faster-whisper==1.2.1
