--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ tokenizers==0.15.2
 openai>=1.50.0
 pydantic>=2.8.2
 sentence-transformers==2.2.2
-numpy>=2.0.0
+numpy==2.0.2
+av==15.0.0
 scikit-learn>=1.5.1
 tabulate>=0.9.0
 langcodes>=3.4.0
